--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
       <meta name="msapplication-TileColor" content="#ffffff">
       <meta name="msapplication-TileImage" content="static/img/favicon/ms-icon-144x144.png">
       <meta name="theme-color" content="#ffffff">
-      <!--if lt IE 9script(src='//html5shim.googlecode.com/svn/trunk/html5.js')
-         -->
+      <!--if lt IE 9script(src='//html5shim.googlecode.com/svn/trunk/html5.js')-->
       <meta name="robots" content="index, follow">
       <meta name="google-site-verification" content="-3F1R8ekDXe8XFfCi7eIVfXOSWqlp_pWNQX2dfgKD4Y">
    </head>
