--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <!-- Open Graph-->
       <meta property="og:locale" content="en_US">
       <meta property="og:type" content="website">
-      <meta property="og:title" content="Amirpasha | CMS Developer">
+      <meta property="og:title" content="Amirpasha | .Net Developer">
       <meta name="description" content="I want to make things that make a difference.">
       <link rel="apple-touch-icon" sizes="57x57" href="static/img/favicon/apple-icon-57x57.png">
       <link rel="apple-touch-icon" sizes="60x60" href="static/img/favicon/apple-icon-60x60.png">
@@ -89,6 +89,46 @@
          <section id="experience" class="section scrollspy">
             <h3 class="page-title white-text teal">Experience</h3>
             <div class="container">
+		    
+
+	  <div class="card">
+                  <div class="card-content">
+                     <div class="row">
+                        <div class="col s12 m2"><a href="https://www.infosys.com" target="_blank"><img src="static/img/cygnet-logo.png" class="responsive-img center-block"></a></div>
+                        <div class="col s12 m10">
+                           <p><span class="card-title"><a href="https://www.infosys.com" target="_blank" class="teal-text hoverline">Infosys</a></span></p>
+                        </div>
+                     </div>
+                     <div class="role brown-text"> Technology Analyst </div>
+     <p><em class="grey-text">It is a critically important part of the supply chain that requires a 360-degree focus on customer service.</em></p>
+                     <h6>Work for Product</h6>
+                     <ul>
+                        <li>Verify, prioritize, and fix software bugs</li>
+                        <li>Magnge exiscign features and Build new one accordnly</li>
+                        <li>
+                           Manage feature sprint life cycle
+                           <ul>
+                              <li>process product requirements</li>
+                              <li>assess current functionality</li>
+                              <li>estimate total work time and merge dates</li>
+                              <li>break down feature into smaller deliverables</li>
+                              <li>solicit feedback regularly</li>
+                              <li>continuously measure and document progress</li>
+                              <li>analyze sprint execution retrospectively</li>
+                           </ul>
+                        </li>
+                        <li>Stack: .NET Core / Angular / MS SQL Server / TypeScript / SCSS / Html5  / IIS </li>
+                     </ul>
+                     <h6>Accomplishments</h6>
+                     <ul>
+
+                        <li>Handled the solution study phase for different companies requirement</li>
+                        <li>Created new subsystems with clear design</li>
+                        <li>Provide data analysis, sample selection, bias elimination, and data representation tools.</li>                       
+                     </ul>
+                  </div>
+                  <div class="card-action"><span>Nov 2018 - Aug 2020  |  Pune, India</span></div>
+               </div>
 			  <div class="card">
                   <div class="card-content">
                      <div class="row">
