--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 	  <div class="card">
                   <div class="card-content">
                      <div class="row">
-                        <div class="col s12 m2"><a href="https://www.infosys.com" target="_blank"><img src="static/img/cygnet-logo.png" class="responsive-img center-block"></a></div>
+                        <div class="col s12 m2"><a href="https://www.infosys.com" target="_blank"><img src="static/img/infosys-logo.jpg" class="responsive-img center-block"></a></div>
                         <div class="col s12 m10">
                            <p><span class="card-title"><a href="https://www.infosys.com" target="_blank" class="teal-text hoverline">Infosys</a></span></p>
                         </div>
