--- a/index.html
+++ b/index.html
@@ -231,7 +231,32 @@
                      </div>
                   </div>
                   <!-- Anodyne -->
-                  <div class="col s12 m6 l4">
+
+		        <div class="col s12 m6 l4">
+                     <div class="card medium">
+                        <div class="card-image waves-effect waves-block waves-light"><img src="static/img/XPO-logo.png" class="activator"></div>
+                        <div class="card-content">
+                           <span class="card-title activator teal-text hoverline">OSN<i class="mdi-navigation-more-vert right"></i></span>
+                           <p>Orbit Showtime Network (OSN) is a Dubai-based direct-broadcast satellite provider serving the MENA. </p>
+                        </div>
+                        <div class="card-reveal">
+                           <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span>
+                           <ul>
+			      <li>Proficient in coding and developing the new Comp.</li>
+                              <li>Involved in developing Server-side coding using .Net Core</li>
+                              <li>Involved in developing Client-side code using Angular.</li>
+                              <li>Involve in resolving post deployment issues.</li>							  
+                              <li>Provide full support to client, from initial client interaction and requirements. </li>
+                              <li>Resolve issues in the maintenance of a site. </li>
+                              <li>Involve in design, coding, debugging, implementation and integration.</li>
+                           </ul>
+                           <div class="card-action"><a href="https://www.xpo.com"  data-position="top" data-tooltip="View Online" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-external-link"></i></a></div>
+                        </div>
+                     </div>
+                  </div>
+		       
+		       
+		       <div class="col s12 m6 l4">
                      <div class="card medium">
                         <div class="card-image waves-effect waves-block waves-light"><img src="static/img/iWeb-Logo-ENG.jpg" class="activator"></div>
                         <div class="card-content">
