--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
                <div class="card">
                   <div class="card-content">
                      <div class="row">
-                        <div class="col s12 m2"><a href="https://www.fisglobal.com" target="_blank"><img src="static/img/FIS-logo.jpg" class="responsive-img center-block"></a></div>
+                        <div class="col s12 m2"><a href="https://www.fisglobal.com" target="_blank"><img src="static/img/FIS-logo.png" class="responsive-img center-block"></a></div>
                         <div class="col s12 m10">
                            <p><span class="card-title"><a href="https://www.fisglobal.com" target="_blank" class="teal-text hoverline">FIS</a></span></p>
                         </div>
                      </div>
-                     <div class="role brown-text"> Specilist </div>
+                     <div class="role brown-text"> Specialist - Development  </div>
                      <p><em class="grey-text">It is a critically important part of the supply chain that requires a 360-degree focus on customer service.</em></p>
                      <h6>Work for Product</h6>
                      <ul>
@@ -363,17 +363,19 @@
                      <h4 class="brown-text light">HTML</h4>
                      <div class="row text-center">
                         <div class="col s4 m2"><img src="static/img/html5.png" class="responsive-img">HTML5</div>
-                        <div class="col s4 m2"><img src="static/img/css3.png" class="responsive-img">Css3</div>
+                        <div class="col s4 m2"><img src="static/img/css3.png" class="responsive-img">CSS3</div>
+                        <div class="col s4 m2"><img src="static/img/scss.png" class="responsive-img">SCSS</div>
                      </div>
                   </div>
                </div>
                <div class="card">
                   <div class="card-content">
-                     <h4 class="brown-text light">Javascript</h4>
+                     <h4 class="brown-text light">JavaScript</h4>
                      <div class="row text-center">
                         <div class="col s4 m2"><img src="static/img/angular.png" class="responsive-img">Angular</div>
                         <div class="col s4 m2"><img src="static/img/jquery.png" class="responsive-img">jQuery</div>
                         <div class="col s4 m2"><img src="static/img/javascript.png" class="responsive-img">Javascript</div>
+                        <div class="col s4 m2"><img src="static/img/typescript.png" class="responsive-img">TypeScript</div>
                         <div class="col s4 m2"><img src="static/img/nodejs.png" class="responsive-img">Node</div>
                      </div>
                   </div>
@@ -383,7 +385,7 @@
                      <h4 class="brown-text light">Back-End</h4>
                      <div class="row text-center">
                         <div class="col s4 m2"><img src="static/img/dotnet-transparent.png" class="responsive-img">.NET</div>
-                        <div class="col s4 m2"><img src="static/img/sql.png" class="responsive-img">Ms Sql</div>
+                        <div class="col s4 m2"><img src="static/img/sql.png" class="responsive-img">MS SQL</div>
                         <div class="col s4 m2"><img src="static/img/mongodb.png" class="responsive-img">MongoDB</div>
                      </div>
                   </div>
@@ -393,6 +395,7 @@
                      <h4 class="brown-text light">IDES</h4>
                      <div class="row text-center">
                         <div class="col s4 m2"><img src="static/img/VS-logo.ico" class="responsive-img">MS Visual Studio</div>
+                        <div class="col s4 m2"><img src="static/img/VS-Code-logo.png" class="responsive-img">MS Visual Studio Code</div>
                         <div class="col s4 m2"><img src="static/img/amazon-web-services.png" class="responsive-img">Amazon Web Services</div>
                      </div>
                   </div>
