--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
       <!-- Custom Styles-->
       <link rel="stylesheet" href="static/css/style.css">
-      <title>Amirpasha | .Net Developer</title>
+      <title>Amirpasha | Full Stack Developer (.Net)</title>
       <!-- Open Graph-->
       <meta property="og:locale" content="en_US">
       <meta property="og:type" content="website">
-      <meta property="og:title" content="Amirpasha | .Net Developer">
+      <meta property="og:title" content="Amirpasha | Full Stack Developer (.Net)">
       <meta name="description" content="I want to make things that make a difference.">
       <link rel="apple-touch-icon" sizes="57x57" href="static/img/favicon/apple-icon-57x57.png">
       <link rel="apple-touch-icon" sizes="60x60" href="static/img/favicon/apple-icon-60x60.png">
@@ -54,7 +54,7 @@
       </nav>
       <nav class="hide-on-large only trigger z-depth-1">
          <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
-         <div class="name-title"><a id="name" href="#main" class="teal-text">Amirpasha</a><span class="brown-text light"> .Net Developer</span></div>
+         <div class="name-title"><a id="name" href="#main" class="teal-text">Amirpasha</a><span class="brown-text light"> Full Stack Developer (.Net)</span></div>
       </nav>
       <nav class="hide-on-large only">
          <ul id="slide-out" class="side-nav">
@@ -78,7 +78,7 @@
          <section id="about" class="section scrollspy">
             <h3 class="page-title white-text teal">About</h3>
             <div class="container flow-text">
-               <blockquote>Mission-driven .Net Developer with a passion.</blockquote>
+               <blockquote>Mission-driven Full Stack Developer with a passion.</blockquote>
                <p>Hi my name is Amirpasha I am a software developer from Pune India who loves to write software to build great products and help businesses succeed with their goals.
                   Although my professional path has taken many twists and turns — from Support Engineer to employee of the year at a non-profit, to small business owner and entrepreneur — I've never stopped engaging my passion to help others and solve problems.
                </p>
@@ -97,8 +97,8 @@
                            <p><span class="card-title"><a href="https://www.fisglobal.com" target="_blank" class="teal-text hoverline">FIS</a></span></p>
                         </div>
                      </div>
-                     <div class="role brown-text"> Specialist - Development  </div>
-                     <p><em class="grey-text">It is a critically important part of the supply chain that requires a 360-degree focus on customer service.</em></p>
+                     <div class="role brown-text"> Senior Software Engineer </div>
+                     <p><em class="grey-text">Fintech innovation demands more than an original idea. You have to take that idea and develop it into a reliable product for the largest possible audience faster than your competition.</em></p>
                      <h6>Work for Product</h6>
                      <ul>
                         <li>Verify, prioritize, and fix software bugs</li>
@@ -115,7 +115,7 @@
                               <li>analyze sprint execution retrospectively</li>
                            </ul>
                         </li>
-                        <li>Stack: .NET Core / Angular / MS SQL Server / TypeScript / SCSS / Html5  / IIS </li>
+                        <li>Stack: .NET Core / MicroServices / Angular / MS SQL Server / TypeScript / SCSS / Html5  </li>
                      </ul>
                      <h6>Accomplishments</h6>
                      <ul>
@@ -124,7 +124,7 @@
                         <li>Provide data analysis, sample selection, bias elimination, and data representation tools.</li>
                      </ul>
                   </div>
-                  <div class="card-action"><span>Sep 2020 - Present  |  Pune, India</span></div>
+                  <div class="card-action"><span>Sep 2020 - Oct 2023  |  Pune, India</span></div>
                </div>
                <div class="card">
                   <div class="card-content">
@@ -247,6 +247,28 @@
                   <!-- Anodyne -->
                   <div class="col s12 m6 l4">
                      <div class="card medium">
+                        <div class="card-image waves-effect waves-block waves-light"><img src="static/img/CLO-logo.png" class="activator"></div>
+                        <div class="card-content">
+                           <span class="card-title activator teal-text hoverline">CLO<i class="mdi-navigation-more-vert right"></i></span>
+                           <p>Commercial Lending Suite, an integrated front-to-back-office solution with built-in workflow and analytics for the entire commercial loan process. </p>
+                        </div>
+                        <div class="card-reveal">
+                           <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span>
+                           <ul>
+                              <li>Proficient in coding and developing the new Comp.</li>
+                              <li>Involved in developing Server-side coding using .Net Core</li>
+                              <li>Involved in developing Client-side code using Angular.</li>
+                              <li>Involve in resolving post deployment issues.</li>
+                              <li>Provide full support to client, from initial client interaction and requirements. </li>
+                              <li>Resolve issues in the product. </li>
+                           </ul>
+                           <div class="card-action"><a href="https://www.fisglobal.com/en/products/fis-commercial-lending-suite/fis-commercial-loan-origination"  data-position="top" data-tooltip="View Online" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-external-link"></i></a></div>
+                        </div>
+                     </div>
+                  </div>
+				   <!-- Anodyne -->
+                  <div class="col s12 m6 l4">
+                     <div class="card medium">
                         <div class="card-image waves-effect waves-block waves-light"><img src="static/img/XPO-logo.png" class="activator"></div>
                         <div class="card-content">
                            <span class="card-title activator teal-text hoverline">XPO<i class="mdi-navigation-more-vert right"></i></span>
@@ -267,7 +289,9 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col s12 m6 l4">
+                 
+				 <!-- Item-->
+				  <div class="col s12 m6 l4">
                      <div class="card medium">
                         <div class="card-image waves-effect waves-block waves-light"><img src="static/img/SurveyMonkey-Logo.jpg" class="activator"></div>
                         <div class="card-content">
