--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <li class="bold"><a href="#awards" class="waves-effect waves-dark red-text"><i class="mdi-action-grade small"></i><span>Awards</span></a></li>
             <li class="bold"><a href="#education" class="waves-effect waves-dark orange-text"><i class="mdi-social-school small"></i><span>Education</span></a></li>
             <li class="bold"><a href="#contact" class="waves-effect waves-dark brown-text"><i class="mdi-content-mail small"></i><span>Contact</span></a></li>
-            <li class="bold"><a href="Amir_Resume.docx" target="_blank" class="waves-effect waves-dark grey-text text-darken-3"><i class="mdi-action-description small"></i><span>Resume</span></a></li>
+            <li class="bold"><a href="Amir_DotNet_Full_Stack_Developer_Exp_9_Yrs.pdf" target="_blank" class="waves-effect waves-dark grey-text text-darken-3"><i class="mdi-action-description small"></i><span>Resume</span></a></li>
          </ul>
       </nav>
       <!-- Main Content-->
@@ -90,6 +90,43 @@
             <h3 class="page-title white-text teal">Experience</h3>
             <div class="container">
                <div class="card">
+                  <div class="card-content">
+                     <div class="row">
+                        <div class="col s12 m2"><a href="https://www.cognizant.com" target="_blank"><img src="static/img/CTS-logo.jpg" class="responsive-img center-block"></a></div>
+                        <div class="col s12 m10">
+                           <p><span class="card-title"><a href="https://www.cognizant.com" target="_blank" class="teal-text hoverline">Cognizant</a></span></p>
+                        </div>
+                     </div>
+                     <div class="role brown-text"> Senior Software Engineer </div>
+                     <p><em class="grey-text">Fintech innovation demands more than an original idea. You have to take that idea and develop it into a reliable product for the largest possible audience faster than your competition.</em></p>
+                     <h6>Work for Product</h6>
+                     <ul>
+                        <li>Verify, prioritize, and fix software bugs</li>
+                        <li>Magnge exiscign features and Build new one accordnly</li>
+                        <li>
+                           Manage feature sprint life cycle
+                           <ul>
+                              <li>process product requirements</li>
+                              <li>assess current functionality</li>
+                              <li>estimate total work time and merge dates</li>
+                              <li>break down feature into smaller deliverables</li>
+                              <li>solicit feedback regularly</li>
+                              <li>continuously measure and document progress</li>
+                              <li>analyze sprint execution retrospectively</li>
+                           </ul>
+                        </li>
+                        <li>Stack: .NET Core / MicroServices / Angular / MS SQL Server / TypeScript / SCSS / Html5  </li>
+                     </ul>
+                     <h6>Accomplishments</h6>
+                     <ul>
+                        <li>Handled the solution study phase for different companies requirement</li>
+                        <li>Created new subsystems with clear design</li>
+                        <li>Provide data analysis, sample selection, bias elimination, and data representation tools.</li>
+                     </ul>
+                  </div>
+                  <div class="card-action"><span>Oct 2023 - Present  |  Pune, India</span></div>
+               </div>
+			   <div class="card">
                   <div class="card-content">
                      <div class="row">
                         <div class="col s12 m2"><a href="https://www.fisglobal.com" target="_blank"><img src="static/img/FIS-logo.png" class="responsive-img center-block"></a></div>
@@ -245,6 +282,28 @@
             <div class="container">
                <div class="row">
                   <!-- Anodyne -->
+				   <div class="col s12 m6 l4">
+                     <div class="card medium">
+                        <div class="card-image waves-effect waves-block waves-light"><img src="static/img/APT-logo.png" class="activator"></div>
+                        <div class="card-content">
+                           <span class="card-title activator teal-text hoverline">APT<i class="mdi-navigation-more-vert right"></i></span>
+                           <p>Audit Processing Tool, Use to devise proper audit procedures and testing based on applicable U.S. auditing standards. </p>
+                        </div>
+                        <div class="card-reveal">
+                           <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span>
+                           <ul>
+                              <li>Proficient in coding and developing the new Comp.</li>
+                              <li>Involved in developing Server-side coding using .Net Core</li>
+                              <li>Involved in developing Client-side code using Angular.</li>
+                              <li>Involve in resolving post deployment issues.</li>
+                              <li>Provide full support to client, from initial client interaction and requirements. </li>
+                              <li>Resolve issues in the product. </li>
+                           </ul>
+                           <div class="card-action"><a href="https://www.bdo.com/insights/assurance/innovation"  data-position="top" data-tooltip="View Online" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-external-link"></i></a></div>
+                        </div>
+                     </div>
+                  </div>
+				   <!-- Anodyne -->
                   <div class="col s12 m6 l4">
                      <div class="card medium">
                         <div class="card-image waves-effect waves-block waves-light"><img src="static/img/CLO-logo.png" class="activator"></div>
@@ -499,8 +558,8 @@
             <h3 class="page-title white-text teal">Contact</h3>
             <div class="container">
                <p><a href="mailto:amirpasha10@gmail.com" data-position="top" data-tooltip="Email Amirpasha" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-envelope"></i><a href="mailto:amirpasha10@gmail.com" class="hoverline">amirpasha10@gmail.com</a></a></p>
-               <p><a href="https://github.com/amirpasha10" target="_blank" data-position="top" data-tooltip="View Amirpasha on GitHub" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i><a href="https://github.com/amirpasha10" class="hoverline">https://github.com/Amirpasha10</a></a></p>
-               <p><a href="https://www.linkedin.com/in/amir10" target="_blank" data-position="top" data-tooltip="View Amirpasha on LinkedIn" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/amir-10/" class="hoverline">linkedin.com/in/Amir-10</a></a></p>
+<!--               <p><a href="https://github.com/amirpasha10" target="_blank" data-position="top" data-tooltip="View Amirpasha on GitHub" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i><a href="https://github.com/amirpasha10" class="hoverline">https://github.com/Amirpasha10</a></a></p>
+-->               <p><a href="https://www.linkedin.com/in/amir10" target="_blank" data-position="top" data-tooltip="View Amirpasha on LinkedIn" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/amir10/" class="hoverline">linkedin.com/in/Amir-10</a></a></p>
             </div>
          </section>
       </main>
